<resources>
    <string name="app_name">Accessibility Demo</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search_cross">Search with cross</string>
    <string name="action_search_tick">Search with tick</string>

    <!-- Navigation menu -->
    <string name="menu_home">Home</string>
    <string name="menu_buttons">Buttons</string>
    <string name="menu_tabs">Tabs</string>
    <string name="menu_rating_bar">Rating Bar</string>
    <string name="menu_list_view">List View</string>
    <string name="menu_search">Search</string>
    <string name="menu_links">Links</string>
    <string name="menu_text">Other text</string>
    <string name="menu_layout">Layout</string>

    <!-- Main View -->
    <string name="welcome_text">Welcome!</string>
    <string name="welcome_subtitle_text">This app is a demo on how to (and sometimes how not to) handle certain situations in a way that makes them accessible to people using screen readers, like TalkBack</string>
    <string name="toast_text">Toasts will announce themselves"</string>
    <string name="toast_content_description">Show a toast</string>

    <!-- Buttons View -->
    <string name="tick">Mark correct</string>
    <string name="cross">Mark incorrect</string>

    <!-- Tabs View -->
    <string name="tab_item">%s Tab</string>
    <string name="tab_centre_text">Now on Tab %d</string>
    <string name="camera_tab">Camera</string>
    <string name="gallery_tab">Gallery</string>
    <string name="manage_tab">Manage</string>

    <!-- RatingBar View -->
    <string name="rate_me">Please rate me!</string>
    <string name="rating_content_description">%1$s out of %2$d stars</string>
    <string name="rating_bar_submit">submit rating</string>
    <string name="rating_thanks">Thanks for rating %s stars!</string>
    <string name="rate_again">Rate again</string>

    <!-- ListView View -->
    <string name="item">Item %d</string>
    <string name="subtitle">Subtitle %d</string>

    <!-- Search View -->
    <string name="regular_text">Just some regular old text on a normal screen</string>
    <string name="regular_button">Click me!</string>
    <string name="search_result">Search result %d</string>

    <!-- Other Text View -->
    <string name="tick_content_description">Marked correct</string>
    <string name="timestamp_mins_ago">posted %dm ago</string>
    <string name="timestamp_mins_ago_long">posted %d minutes ago</string>
    <string name="timestamp_full">posted on %s</string>
    <string name="add_button">Add</string>

    <!-- Layout Fragment -->
    <string name="avatar_content_description">%s\'s profile</string>
    <string name="layout_likes">3 likes</string>
    <string name="layout_timestamp">3 days ago</string>
    <string name="heart_content_description">Heart</string>
    <string name="comment_content_description">Comment</string>
    <string name="share_content_description">Share</string>
</resources>
