<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:title="@string/menu_home" />
        <item
                android:id="@+id/nav_tabs"
                android:title="@string/menu_tabs" />
        <item
                android:id="@+id/nav_rating"
                android:title="@string/menu_rating_bar" />
        <item
                android:id="@+id/nav_list"
                android:title="@string/menu_list_view" />
        <item
                android:id="@+id/nav_search"
                android:title="@string/menu_search" />
        <item
                android:id="@+id/nav_links"
                android:title="@string/menu_links" />

        <item
                android:id="@+id/nav_text"
                android:title="@string/menu_text" />
    </group>
</menu>
